# pyruve

./: Cargo.toml  LICENSE  README.md
src/: command.rs  integration.rs  main.rs  venv.rs
src/shell/: pyruve.bash  pyruve.fish  pyruve.zsh
